--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "json": "^11.0.0"
+    "json": "^11.0.0",
+    "mongoose": "^8.0.0",
+    "nodemon": "^3.0.1"
   },
   "devDependencies": {
     "supertest": "^6.3.3"
